--- a/css/style.css
+++ b/css/style.css
@@ -482,6 +482,14 @@ footer>p *{
 
 
 /* responsive */
-@media screen and (max-width:1024px) {}
+@media screen and (max-width:1024px) {
+
+    #menu{
+        display: block;
+    }
+    header>div>nav{
+        display: none;
+    }
+}
 
 @media screen and (max-width:767px){}
