--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,7 @@ main>#section1>div>article{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-bottom:20px ;
 
 }
 
@@ -285,8 +286,8 @@ main>#section4>#intro_section4{
 
 main>#section4>div>div>article{
     background-color: #1E1D31;
-    max-width: 925px;
-    max-height: 185px;
+    max-width: fit-content;
+    max-height:fit-content  ;
     padding: 40px 400px 40px 40px;
     margin-bottom: 100px;
     margin-top: 100px;
@@ -332,17 +333,23 @@ main>#section4>#inscription>#article_inscription{
 }
 
 main>#section4>#small_group{
+    margin-top: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     max-width: 1920px;
-    padding: 120px;
 }
 
 #section4 a{
     margin-left: 300px;
 
 }
+
+main>#section4 img{
+        max-width: 460px;
+        width: 100%;
+    }
+
 
 /* Section 5 */
 
@@ -482,14 +489,71 @@ footer>p *{
 
 
 /* responsive */
+
+@media screen and (max-width:1320px){
+    main>#section4>div>div>article{
+            padding-right: 122px;
+        }
+
+}
+
+@media screen and (max-width:1180px){
+    #section4 a{
+        margin-left: auto;
+        margin-right: 0;
+        display: block;
+        text-align: center;
+    }
+}
+
 @media screen and (max-width:1024px) {
 
     #menu{
         display: block;
     }
+
     header>div>nav{
         display: none;
     }
+
+    #menu:hover{
+        color: #30CD8A;
+        }
+
+    #menu:hover header>div>nav{
+        display: flex;
+    }
+
+    main>#section3 .Errante_description{
+        display: grid;
+    }
+
+    main>#section4>div>div>article{
+            padding-right: 20px;
+        }
+    
+    #section5{
+        grid-template-columns: 1fr;
+        display: grid;
+        justify-items: center;
+    }
+
+    #section5 article{
+        margin-top: 20px;
+    }
 }
 
-@media screen and (max-width:767px){}
+@media screen and (max-width:767px){
+    main>#section4>#inscription{
+        display: grid;
+        gap: 30px;
+        justify-items: center;
+    }
+
+    main>#section4>#inscription>div>article{
+        margin-bottom: 10px;
+        padding-right: 40px;
+        border-radius: 24px;
+    }
+
+}
